--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Hong Jin Lau</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/hongjin_avatar.svg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,21 +40,21 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-        </li>
-        <li class="nav-item">
+        </li> -->
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -66,30 +66,30 @@
         <h1 class="mb-0">Hong Jin
           <span class="text-primary">Lau</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+        <!-- <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
           <a href="mailto:name@email.com">name@email.com</a>
-        </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        </div> -->
+        <p class="lead mb-5">I am a web developer.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/lauhongjin/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/lhjd/" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <!-- <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
@@ -140,10 +140,10 @@
       </div>
 
     </section>
+ -->
+    <!-- <hr class="m-0"> -->
 
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
@@ -171,9 +171,9 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
 
-    <hr class="m-0">
+    <!-- <hr class="m-0"> -->
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
@@ -190,30 +190,30 @@
           <li class="list-inline-item">
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item">
+          <!-- <li class="list-inline-item">
             <i class="fab fa-angular"></i>
-          </li>
+          </li> -->
           <li class="list-inline-item">
             <i class="fab fa-react"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
           </li>
-          <li class="list-inline-item">
+          <!-- <li class="list-inline-item">
             <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
+          </li> -->
+          <!-- <li class="list-inline-item">
             <i class="fab fa-less"></i>
-          </li>
+          </li> -->
           <li class="list-inline-item">
             <i class="fab fa-wordpress"></i>
           </li>
-          <li class="list-inline-item">
+          <!-- <li class="list-inline-item">
             <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
+          </li> -->
+          <!-- <li class="list-inline-item">
             <i class="fab fa-grunt"></i>
-          </li>
+          </li> -->
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
@@ -224,7 +224,7 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Mobile-First, Responsive Design</li>
-          <li>
+          <!-- <li>
             <i class="fa-li fa fa-check"></i>
             Cross Browser Testing &amp; Debugging</li>
           <li>
@@ -232,7 +232,7 @@
             Cross Functional Teams</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Agile Development &amp; Scrum</li> -->
         </ul>
       </div>
     </section>
@@ -242,14 +242,14 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a web developer, I enjoy most of my time with my family and our dog.</p>
+        <!-- <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
@@ -281,7 +281,7 @@
             Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
