--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li> -->
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Projects</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
@@ -174,6 +177,30 @@
     </section> -->
 
     <!-- <hr class="m-0"> -->
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5">Projects</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Puzzle Game</h3>
+            <p>
+              <a href="https://lhjd.github.io/sei-20/" target="_blank">
+                <img src="img/puzzle_screenshot.png" alt="Puzzle" class="img-thumbnail" width="200">
+              </a>
+            </p>
+            <!-- <div class="subheading mb-3">Bachelor of Science</div>
+            <div>Computer Science - Web Development Track</div>
+            <p>GPA: 3.23</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2006 - May 2010</span>
+          </div> -->
+        </div>
+      </div>
+    </section> 
+    
+    <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
